--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -21,13 +21,26 @@ nav {
 }
 
 p {
-  color: white;
+  color: black;
 }
 
-/*repeating-linear-gradient(
-  45deg,
-  #606dbc,
-  #606dbc 10px,
-  #465298 10px,
-  #465298 20px
-);*/
+.chemical-element {
+  border: 1px solid black;
+  height: 65px;
+  width: 65px;
+  background: orange;
+}
+
+.atomic-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.atomic-info {
+  margin: 0px;
+}
+
+.atomic-name, .atomic-mass {
+  font-size: 9px;
+}
