--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -50,6 +50,9 @@ table {
 
 td {
   cursor: pointer;
+  -moz-box-shadow:    inset 0 0 5px rgba(0, 0, 0, 0.68);
+  -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.68);
+  box-shadow:         inset 0 0 5px rgba(0, 0, 0, 0.68);
 }
 
 .element-groups {
