--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -20,6 +20,10 @@ nav {
   align-items: center;
 }
 
+.wrapper {
+  
+}
+
 p {
   color: black;
 }
@@ -68,4 +72,14 @@ td {
   text-align: center;
   font-size: 13px;
   font-weight: bold;
+}
+
+.null-component {
+  height: 60px;
+  width: 60px;
+  background: #606dbc;
+}
+
+.range-info {
+
 }
