--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -18,10 +18,11 @@ nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
+  height: 50px;
 }
 
 .wrapper {
-  
+
 }
 
 p {
@@ -64,8 +65,8 @@ td {
 }
 
 .element-group {
-  height: 80px;
-  width: 80px;
+  height: 75px;
+  width: 75px;
 }
 
 .element-group-text {
@@ -75,11 +76,5 @@ td {
 }
 
 .null-component {
-  height: 60px;
-  width: 60px;
-  background: #606dbc;
-}
-
-.range-info {
-
+  box-shadow: none;
 }
