--- a/stylesheets/application.css
+++ b/stylesheets/application.css
@@ -7,7 +7,13 @@ body {
 }
 
 .wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
+.main-block-elements {
+  margin-top: 10px;
 }
 
 p {
@@ -62,4 +68,32 @@ td {
 
 .null-component {
   box-shadow: none;
+}
+
+.range-info {
+  text-align: center;
+}
+
+.lanthanides-actinides {
+  margin-top: 20px;
+}
+
+.no-cursor-pointer {
+  cursor: auto;
+}
+
+.title-cell-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.title-letter {
+  margin: 0;
+  font-weight: bold;
+}
+
+.title-text {
+  font-size: 9px;
+  margin: 0;
 }
