finish styling of element info page for each element, with Google Map, element story and photo. Incorporate Material UI library for this purpose

--- a/src/stylesheets/element_info_page.css
+++ b/src/stylesheets/element_info_page.css
@@ -1,4 +1,39 @@
+.element-name {
+  position: relative;
+  text-align: center;
+  font-size: 50px; 
+  color: black;
+  z-index: 1;
+  margin-top: 0px;
+  background: white;
+  box-shadow: 10px 6px 26px #000000;
+}
+
+.back-btn {
+  text-decoration: none;
+  color: black;
+}
+
+.paper-bottom {
+  position:fixed;
+  width: 80%;
+  margin: 60px auto 0;
+  display: flex; 
+  align-items: center;
+  justify-content: space-around;
+  bottom:0;
+  left:0;
+  right:0;
+}
+
+.element-story {
+  margin: 18px; 
+  width:70%; 
+}
+
 .element-photo {
-  width: 400px;
-  height: 400px;
+  height: 175px;
+  width: 175px;
+  border-radius: 50%; 
+  margin: 18px;
 }
