--- a/src/stylesheets/application.css
+++ b/src/stylesheets/application.css
@@ -1,8 +1,9 @@
 @import url("./normalize.css");
 
 body {
-  font-family: 'Montserrat', sans-serif;
-  background: #606dbc;
+  font-family: 'Montserrat', sans-serif; 
+  background: radial-gradient(circle farthest-corner at right bottom,#ffd08a 0,#ffa376 28%,#d26578 52%,#682a84 79%,#241668 100%);
+  height: 100vh; 
 }
 
 p {
