--- a/src/stylesheets/google_map.css
+++ b/src/stylesheets/google_map.css
@@ -1,4 +1,8 @@
 .map {
-  width: 400px;
-  height: 400px;
+  height: 100vh; 
+  width: 100vw; 
+  position:absolute; 
+  top: 0; 
+  left: 0; 
+  z-index: 0;
 }
